# meta-brollo

./: LICENSE.md  README.md  meta-brollo.cabal  stack.yaml
app/: Main.hs
src/: Bot.hs  Interpret.hs  Lib.hs
src/Lib/: Prelude.hs
