name:                meta-brollo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/meta-brollo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  other-modules:       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , discord-hs
                     , text
                     , pipes
                     , random
                     , parsec
                     , process
                     , hint
                     , comonad
                     , time
                     , websockets
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable meta-brollo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , meta-brollo
                     , protolude >= 0.1.6 && < 0.2
                     , websockets
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite meta-brollo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , meta-brollo
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/meta-brollo
